# nanochat.ai

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
assets/icons/: icon.icns
src/: bootstrap.scss  inference_worker.js  load_worker.js  main.css  main.html  main.js  preload.js  renderer.js
src/backend/: api.h  backend.cpp  tinyllama.h  tinyllama_tok.h  zephyr.h  zephyr_tok.h
src/backend/gten/: gten.h  modules.cpp  modules.h  ops.h  simd_ops.h
